# fem-eigen-em-2d3d-whitney

./: .gitignore  CMakeLists.txt  README.md
scripts/: build_and_run_all.sh  generate_results_md.py  plot_validation_2d_22.py  plot_vtk_quiver.py  validate_2d_22.py  validate_3d_31.py
src/core/: block_ops.hpp  dense.hpp  fem_scalar.hpp  fem_scalar_helm10.cpp  helm10_scalar_system.cpp  helm10_scalar_system.hpp  io_vtk.hpp  io_vtk_sv.hpp  lapack_eig.hpp  mesh2d.hpp  mesh2d_circle.cpp  mesh2d_circle.hpp  mesh2d_coax.cpp  mesh2d_coax.hpp  mesh2d_rect.cpp  mesh2d_rect.hpp  mesh3d.hpp  mesh3d_cylinder.cpp  mesh3d_cylinder.hpp  mesh3d_rect.cpp  mesh3d_rect.hpp  mesh3d_sphere.cpp  mesh3d_sphere.hpp  mode_match_circle.hpp  mode_match_coax.hpp  mode_match_rect.hpp  output_paths.hpp  sparse_sym.hpp
src/edge/: edge_assembly.cpp  edge_assembly.hpp  edge_basis.cpp  edge_basis.hpp  edge_dofs.cpp  edge_dofs.hpp  mode_match_circle_edge.hpp  mode_match_coax_edge.hpp  mode_match_rect_edge.hpp  mode_match_rect_edge_tm.hpp
src/edge3d/: edge3d_assembly.cpp  edge3d_assembly.hpp  edge3d_basis.cpp  edge3d_basis.hpp  edge3d_dofs.cpp  edge3d_dofs.hpp
src/fem3d/: README.md  fem3d_case_driver.hpp  fem3d_compare.hpp  fem3d_reference_tables.hpp
src/fem3d0/: README.md  main_fem3d0_rect.cpp
src/fem3d1/: README.md  main_fem3d1_rect.cpp
src/helm10/: README.md  main_helm10_circle.cpp  main_helm10_coax.cpp  main_helm10_rect.cpp  scalar_mode_post.hpp
src/helmvec/: README.md  edge_mode_post.hpp  main_edge_circle.cpp  main_edge_coax.cpp  main_edge_rect.cpp
src/helmvec1/: README.md  helmvec1_mixed_system.cpp  helmvec1_mixed_system.hpp  main_mixed_circle.cpp  main_mixed_coax.cpp  main_mixed_rect.cpp  mixed_mode_utils.hpp  mixed_rect_reference.hpp
src/helmvec2/: README.md  helmvec23_shared.hpp  helmvec2_coupled_system.cpp  helmvec2_coupled_system.hpp  main_helmvec2_rect.cpp
src/helmvec3/: README.md  main_helmvec3_rect.cpp
